Fix spacing on pypi button

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -311,8 +311,8 @@ a.github {
 }
 
 a.pypi {
-    background: none;
-	padding: 2px 2px 2px 2px;
+	background: none;
+	padding: 2px 2px 2px 3px;
 }
 
 a.buttons:hover {
